Updates chapter-3-7-gc-garbage-collectors.md
Auto commit by GitBook Editor